--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,11 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.webview"
+        applicationId "com.example1234.webview"
         minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -29,12 +28,15 @@ android {
 }
 
 dependencies {
+    implementation 'com.appsflyer:af-android-sdk:6.3.2'
+    implementation 'com.facebook.android:facebook-android-sdk:5.4.0'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
-    implementation 'com.facebook.android:facebook-android-sdk:4.28.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    testImplementation 'junit:junit:4.+'
+    implementation 'com.facebook.android:facebook-android-sdk:5.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
