--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WebView" >
+        android:theme="@style/Theme.WebView"
+        android:usesCleartextTraffic="true">
         <activity
             android:name="com.nneo.srta.GameActivity"
             android:exported="false" />
